--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 개똥이의 코딩 이야기
-email: gaeco@gaeco.net
+title: 개코 : 개똥이의 코딩 이야기
+#email: gaeco@gaeco.net
 description: > # this means to ignore newlines until "baseurl:"
   적나라한 코딩이야기가 시작된다.
 baseurl: "" # the subpath of your site, e.g. /blog
