--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 개코 : 개똥이의 코딩 이야기
+title: 개코 - 개똥이의 코딩 이야기
 #email: gaeco@gaeco.net
 description: > # this means to ignore newlines until "baseurl:"
   적나라한 코딩이야기가 시작된다.
